Fri Mar 19 16:52:18 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: use GtkFileChooser if compiled with a new
	  enough gtk+, but still allow compilation with GtkFileSelector
	  in case old gtk+ is used.  Also fix up some strings.  Finally
	  add .gel as the file extension on Save As.. if no extension
	  was used.

	* configure.in: fixup a bit

Fri Mar 19 11:11:01 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: apparently separator setting is just plain
	  ignored for message dialogs so don't set it (avoids unsightly
	  GTK+ warnings with new GTK+)

Fri Mar 19 11:05:00 2004  George Lebl <jirka@5z.com>

	* src/eval.[ch], src/calc.c: translate e^x to exp(x) since that is
	  more precise

	* src/mpwrap.c: better error reporting for inverses, better random
	  number seeding, fix of mpw_randint function if rop==op, and minor
	  general cleanup

	* configure.in: raise version

Wed Mar 10 21:22:00 2004 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added ga to ALL_LINGUAS (Irish).

Tue Jan 20 15:56:30 2004  George Lebl <jirka@5z.com>

	* lib/linear_algebra/special_matrices.gel: add rotation matrices

Wed Dec 31 14:41:47 2003  George Lebl <jirka@5z.com>

	* Release 0.5.7.1

	* src/gnome-genius.c: fix spinners being too thin

Wed Dec 31 12:04:56 2003  George Lebl <jirka@5z.com>

	* Release 0.5.7

Wed Dec 31 11:40:12 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: mpwfr_pow is kind of broken in gmp 4.1.2 at least
	  (seems fixed in newer mpfr, will have to do some sort of a check
	  in the future).

	* lib/functions/elementary.gel: add ErrorFunction/erf

	* lib/functions/sums_products.gel: add InfiniteProduct and
	  InfiniteProduct2

	* src/geniustests.txt: add some tests

	* Makefile.am: add intltool-modules/XML/Parser/Style/OrigTree.pm
	  to EXTRA_DIST

	* configure.in: raise version, whack the DEPRECATED things

Fri Dec 12 10:31:55 2003  George Lebl <jirka@5z.com>

	* lib/linear_algebra/subspaces.gel,