@@ -1,3 +1,8 @@
+Fri Mar 19 17:42:38 2004  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: properly interrupt on Ctrl-C and also whack
+	  the readbuf* which weren't used anymore
+
 Fri Mar 19 16:52:18 2004  George Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: use GtkFileChooser if compiled with a new
